<resources>
    <string name="app_name">DualPair</string>
    <string name="facebook_app_id">454804811371783</string>
    <string name="fb_login_protocol_scheme">fb454804811371783</string>
    <string name="add_sociotype_header">Select your sociotype or start test</string>
    <string name="start_test">Start test</string>
    <string name="submit">Submit</string>
    <string name="ok">Ok</string>
    <string name="socionics_test">Socionics test</string>
    <string name="sistematic">Sistematic</string>
    <string name="spontaneous">Spontaneous</string>
    <string name="structure">Structure</string>
    <string name="flow">Flow</string>
    <string name="plan">Plan</string>
    <string name="improvisation">Improvisation</string>
    <string name="solution">Solution</string>
    <string name="impulse">Impulse</string>
    <string name="regularity">Regularity</string>
    <string name="accident">Accident</string>
    <string name="organized">Organized</string>
    <string name="impulsive">Impulsive</string>
    <string name="preparation">Preparation</string>
    <string name="impromtu">Impromtu</string>
    <string name="resolute">Resolute</string>
    <string name="dedicated">Dedicated</string>
    <string name="solid">Solid</string>
    <string name="kind_hearted">Kind-hearted</string>
    <string name="prone_to_criticism">Prone to criticism</string>
    <string name="wellwishing">Wellwishing</string>
    <string name="advantage">Advantage</string>
    <string name="luck">Luck</string>
    <string name="head">Head</string>
    <string name="heart">Heart</string>
    <string name="thoughts">Thoughts</string>
    <string name="feelings">Feelings</string>
    <string name="analyze">Analyze</string>
    <string name="sympathize">Sympathize</string>
    <string name="factual">Factual</string>
    <string name="theoretical">Theoretical</string>
    <string name="application_in_practice">Application in practice</string>
    <string name="hidden_meaning_search">Hidden meaning search</string>
    <string name="experience">Experience</string>
    <string name="theory">Theory</string>
    <string name="reasonable">Reasonable</string>
    <string name="astonishing">Astonishing</string>
    <string name="practician">Practician</string>
    <string name="visionary">Visionary</string>
    <string name="realist">Realist</string>
    <string name="dreamer">Dreamer</string>
    <string name="reality">Reality</string>
    <string name="prospects">Prospects</string>
    <string name="noisy">Noisy</string>
    <string name="quiet">Quiet</string>
    <string name="lively">Lively</string>
    <string name="calm">Calm</string>
    <string name="sociability">Sociability</string>
    <string name="concentration">Concentration</string>
    <string name="energy_expenditure">Energy expenditure</string>
    <string name="energy_saving">Energy saving</string>
    <string name="oriented_to_outside_world">Oriented to outside world</string>
    <string name="oriented_inward">Oriented inward</string>
    <string name="speak_aloud">Speak aloud</string>
    <string name="live_through">Live through</string>
    <string name="brave">Brave</string>
    <string name="cold_blooded">Cold blooded</string>
    <string name="confirm">Confirm</string>
    <string name="tab_review">Review</string>
    <string name="tab_pairs">Pairs</string>
    <string name="tab_menu">Menu</string>
    <string name="nope">Nope</string>
    <string name="like">Like</string>
    <string name="search_for_male">Search for male</string>
    <string name="search_for_female">Search for female</string>
    <string name="min_age">Minimum age</string>
    <string name="max_age">Maximum age</string>
    <string name="loading_user">Loading user</string>
    <string name="updating_location">Updating location</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading</string>
    <string name="no_matches_found">No matches found, please try again later.</string>
    <string name="search_parameters">Search parameters</string>
    <string name="logout">Logout</string>
    <string name="sociotypes">Sociotypes</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="you_have_new_match">You have new match!</string>
    <string name="you_have_no_matches">You have no matches</string>
    <string name="user_liked_you">%1$s liked you</string>
    <string name="save">Save</string>
    <string name="user_profile">User profile</string>
    <string name="sample_text">Sample text</string>
    <string name="add_description">Write about yourself</string>
    <string name="about">About</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="about_text">
        <p>made by <b>Artur</b></p>
    </string>
    <string name="admin_email">kur.artur@gmail.com</string>
    <string name="choose_sociotype">Choose sociotype</string>
    <string name="empty_history">You didn\'t review anything yet</string>
    <string name="sociotype">Sociotype</string>
    <string name="accounts_and_communication"><![CDATA[Accounts & Communication]]></string>
    <string name="photos">Photos</string>
    <string name="FB">Facebook</string>
    <string name="VK">VKontakte</string>
    <string name="about_me">About me</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="no_photos_found">No photos</string>
    <string name="must_provide_sociotype"># Specify your <b><u>sociotype</u></b></string>
    <string name="must_provide_date_of_birth"># Specify your <b><u>date of birth</u></b></string>
    <string name="must_provide_search_parameters"># Specify <b><u>search parameters</u></b></string>
    <string name="to_start_searching">To start searching you must:</string>
    <string name="no_sociotypes">No sociotypes</string>
    <string name="connect_to">Connect to %1$s</string>
    <string name="login_with_facebook">Log in with Facebook</string>
    <string name="login_with_vkontakte">Log in with VKontakte</string>
    <string name="terms_and_conditions_disclaimer">By logging in you agree with <a href="http://dualpair.lt/terms"><u>terms and conditions</u></a> and <a href="http://dualpair.lt/privacy"><u>privacy policy</u></a></string>
    <string name="name">Name</string>
    <string name="you">You</string>
    <string name="date_of_birth_warning">Date of birth will be used to calculate your age. It will not be disclosed to other users.</string>
    <string name="about_you">About you</string>
    <string name="review_age">, %1$d</string>
    <string name="review_city">%1$s</string>
    <string name="age_range">Age range</string>
    <string name="help">Help</string>
    <string name="how_to">How to</string>
    <string name="socionics_test_help">From each row select one item that you think is more appropriate for you.</string>
    <string name="got_it">Got it</string>
    <string name="socionics_test_counter">%1$d/%2$d</string>
    <string name="random">Random</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>
    <string name="photo_edit_help">Are you stupid?</string>
    <string name="my_matches">Matches</string>
    <string name="logging_in">Logging in</string>
    <string name="waiting_for_location">Waiting for location</string>
    <string name="error">Error</string>
    <string name="unmatch">Unmatch</string>
    <string name="report">Report</string>
    <string name="report_user_confirmation">Report %1$s?</string>
    <string name="user_reported">%1$s reported</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="relationship_status">Relationship status</string>
    <string name="rs_none">No answer</string>
    <string name="rs_single">Single</string>
    <string name="rs_in_relationship">In relationship</string>
    <string name="why_are_you_here">Why are you here?</string>
    <string name="pob_none">No answer</string>
    <string name="pob_find_friend">To find a friend</string>
    <string name="pob_find_love">To find love</string>
    <string name="provide_relationship_status">Share your relationship status</string>
    <string name="provide_purpose_of_beings">Let others know why you are here</string>
    <string name="i_am_here_to">I am here to %1$s</string>
    <string name="is_here_to">%1$s is here %2$s</string>
    <string name="he">He</string>
    <string name="she">She</string>
    <string name="location_permissions_explanation_title">Location access</string>
    <string name="location_permission_explanation_message">We need to know your location to find users near you. Without this permission you will not be able to use the app.</string>
    <string name="decline_anyway">Decline anyway</string>
    <string name="open_app_settings">Open app settings</string>
    <string name="location_permission_denied_explanation_message">You have denied permission to access location. You can allow this app to access location in app settings.</string>
    <string name="close_app">Close app</string>
    <string name="no_server_connection">Couldn\'t connect to server</string>
    <string name="review_distance">(%1$dkm)</string>
    <string name="unable_to_save_user">Unable to save user</string>
    <string name="name_cant_be_empty">Name can\'t be empty</string>
    <string name="name_is_too_long">Name is too long</string>
    <string name="some_out_of_some">%1$d / %2$d</string>
    <string name="sample">Sample</string>
    <string name="more">More</string>
    <string name="check_internet_connection">No internet connection. Please check your internet connection and try again.</string>
    <string name="unmatched">%1$s removed from matches</string>
    <string name="user_reported_and_unmatched">%1$s reported and removed from matches</string>
    <string name="search">Search</string>
    <string name="unexpected_error">Unexpected error occurred</string>
    <string name="invite_friends">Invite friends</string>
    <string name="share_invite_via">Share invite via</string>
    <string name="recommendation_text">Want to find people that match your personal character? Install DualPair and join the community!</string>
    <string name="you_are_offline">You are offline</string>
    <string name="cant_report_offline">Can\'t report while offline</string>
    <string name="cant_unmatch_offline">Can\'t unmatch while offline</string>
    <string name="my_dualpair">My DualPair</string>
    <string name="me">Me</string>
    <string name="view_public_profile">View public profile</string>
    <string name="settings">Settings</string>
    <string name="change">Change</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum pellentesque ultrices tortor vehicula feugiat. Nam finibus, mauris id euismod pretium, est urna fringilla tellus, id vulputate nulla erat sed nibh. Mauris faucibus malesuada congue. Nunc posuere fringilla lorem, ut accumsan dolor auctor vitae. Vivamus sem eros, molestie nec vulputate id, porttitor eget velit. Donec augue dolor, gravida eget blandit ut, fringilla ac sapien. Donec diam libero, sodales eu libero nec, pretium ultrices nunc. Sed ultrices elementum lorem. Integer aliquam odio a dolor pharetra commodo. Integer molestie tristique mollis. Cras viverra elementum erat eu consequat.</string>
    <string name="lii">LII</string>
    <string name="ile">ILE</string>
    <string name="ese">ESE</string>
    <string name="sei">SEI</string>
    <string name="lsi">LSI</string>
    <string name="sle">SLE</string>
    <string name="eie">EIE</string>
    <string name="iei">IEI</string>
    <string name="esi">ESI</string>
    <string name="see">SEE</string>
    <string name="lie">LIE</string>
    <string name="ili">ILI</string>
    <string name="eii">EII</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
</resources>