<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fb_login_button"
        style="@style/loginButtonLayout"
        android:background="#3b5998"
        android:layout_marginTop="50dp">
        
        <ImageView
            style="@style/loginButtonIcon"
            android:src="@drawable/fb_f_logo__blue_50"/>

        <TextView
            style="@style/loginButtonText"
            android:text="@string/login_with_facebook"/>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vk_login_button"
        style="@style/loginButtonLayout"
        android:background="#45668e"
        android:layout_marginTop="20dp">

        <ImageView
            style="@style/loginButtonIcon"
            android:src="@drawable/vkontakte_logo"/>

        <TextView
            style="@style/loginButtonText"
            android:text="@string/login_with_vkontakte"/>

    </LinearLayout>

    <TextView
        android:id="@+id/terms_and_conditions_disclaimer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_conditions_disclaimer"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="12sp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="50dp"/>

</LinearLayout>
