<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:layout_marginBottom="8dp">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_info_outline_black_24dp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:layout_toEndOf="@id/icon"
        android:layout_toStartOf="@id/disconnect"
        android:text="@string/sample"
        android:layout_centerVertical="true"
        android:ellipsize="end"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:padding="4dp"
        android:textColor="@color/colorAccent"
        android:background="@drawable/button_border_accent"/>

    <TextView
        android:id="@+id/disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:padding="4dp"
        android:background="@drawable/button_border"/>

</RelativeLayout>